# MultiSqlConnector

./: .gitignore  LICENSE  README.md  pyproject.toml
src/multisqlconnector/: __init__.py  db_config.py  example.py  mysqlhelper.py  sqlhelper.py  sqlite3helper.py
src/multisqlconnector/etc/: mysql_test_db_02_create.sql  mysql_test_db_02_create_and_insert.sql  mysql_test_db_02_insert.sql  sqlite_test_create.sql  sqlite_test_create_and_insert.sql  sqlite_test_insert.sql  sqlite_testtable_create.sql
